--- a/PIE-v0.1/twitter-module/README
+++ b/PIE-v0.1/twitter-module/README
@@ -1,29 +1,23 @@
 #    pie
 #    a twitter-like app for airplug
-#    authors: Christophe Boudet, Julien Castaigne, Jonathan Roudire,
-#             Christophe Roquette, JŽrŽmy Subtil
+#    authors: Christophe Boudet, Julien Castaigne, Jonathan Roudiere,
+#             Christophe Roquette, Jérémy Subtil
 #    license type: free of charge license for academic and research purpose
 #    see license.txt
 
----------------------
-SERVER PIE
----------------------
-
-
-
-
+--------------------
+PIE : TWITTER MODULE
+--------------------
 
 - DESCRIPTION
 
-Ceci est un serveur centralise accessible en TCP (port 8000 par dŽfaut) pour communiquer entre Airplug et Internet (Twitter dans le cas prŽsent)
-
-
+Ceci est un serveur centralise accessible en TCP (port 8000 par défaut)
+pour communiquer entre Airplug et Internet (Twitter dans le cas présent)
 
 - INSTALLATION :
 
-packages recquires : 
+packages requis : 
 Perl, MySQL
-
 
 installation modules Perl :
 > cpan
@@ -35,9 +29,8 @@ Digest::HMAC_MD5 (HMAC en MD5)
 Net::Twitter (interface)
 Scalar::Util
 
-
-CrŽation des tables MySQL
-ExŽcuter le code SQL de table.sql
+Création des tables MySQL
+Exécuter le code SQL de table.sql
 Les mots de passe sont en clair, et le login doit etre unique.
 
 Twitter :
@@ -51,7 +44,6 @@ Modifier dans serv.pl
  access_token
  access_token_secret
 par celles fournit par la nouvelle application
-
 
 - UTILISATION :
 
